tests/neg/i3246.scala
class Test {
  def foo(x: Int) = 1
  val bar: () => Int = foo _
}
